--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,8 @@ def    archLifecycleVersion = '2.2.0'
     implementation "com.squareup.retrofit2:converter-gson:$gson"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
-
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
 }
