Custom Bottom Navigation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,14 @@ android {
 }
 
 dependencies {
-   def recyclerViewVersion = '1.1.0'
+    def recyclerViewVersion = '1.1.0'
     def cardViewVersion = '1.0.0'
-    def gsonVersion='2.8.0'
-    def retrofit2='2.3.0'
-    def  gson='2.3.0'
-    def  okhttp3='3.4.1'
-    def  glideVersion='4.9.0'
-def    archLifecycleVersion = '2.2.0'
+    def gsonVersion = '2.8.0'
+    def retrofit2 = '2.3.0'
+    def gson = '2.3.0'
+    def okhttp3 = '3.4.1'
+    def glideVersion = '4.9.0'
+    def archLifecycleVersion = '2.2.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -65,4 +65,6 @@ def    archLifecycleVersion = '2.2.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+    implementation 'com.github.delight-im:Android-AdvancedWebView:v3.0.0'
+
 }
